tests/files/parser_tests/should_fail/107.cmdr
//Should not parse else if statement by itself
else if (true) {
	x = 3;
}